# mat-pref

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_chem_descriptors.py  generate_traces.py  run_baselines.py
src/mat_pref/: __init__.py
training/: tinker_eval.py  tinker_eval_llama.py  tinker_grpo.py  tinker_grpo_llama.py  tinker_sft.py  tinker_sft_llama.py
